--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,5 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Telegram Official Group
-    url: https://t.me/pixelexperiencechat
+  - name: Telegram Contact
+    url: https://t.me/Vhmit
     about: Please ask and answer questions here.
-  - name: Telegram Official Channel
-    url: https://t.me/PixelExperience
-    about: Our Official Telegram Channel
